fixed canvas size on mobile; minor fixes

--- a/paradise.css
+++ b/paradise.css
@@ -29,3 +29,16 @@ div.center {
     cursor: pointer;
 }
 
+@media only screen and (orientation:portrait) {
+    div.main {
+        zoom: 0.7;
+        -moz-transform: scale(0.7);
+    }
+}
+@media only screen and (orientation:landscape) {
+    div.main {
+        zoom: 1;
+        -moz-transform: scale(1);
+    }
+}
+
